maps added, image saving added

--- a/frontend/to-do-client/src/index.html
+++ b/frontend/to-do-client/src/index.html
@@ -7,11 +7,25 @@
 
   <base href="/" />
 
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+
+  <script type='text/javascript'>
+    var mapsReadyResolve;
+    var mapsReady = new Promise(
+      function (resolve, reject) {
+        mapsReadyResolve = resolve;
+      }
+    )
+    function mapsCallback() {
+      console.log('maps ready');
+      mapsReadyResolve();
+    }
+  </script>
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -20,6 +34,10 @@
 
 <body>
   <app-root></app-root>
+  <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://js.api.here.com/v3/3.1/mapsjs-ui.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
